# task_teams_py

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.yml
teams_py/: manage.py
teams_py/teams/: models.py  serializers.py  urls.py  views.py
teams_py/teams/migrations/: 0001_initial.py  0002_initial.py
teams_py/teams_py/: asgi.py  settings.py  urls.py  wsgi.py
teams_py/users/: models.py  serializers.py  urls.py  views.py
teams_py/users/migrations/: 0001_initial.py  0002_alter_human_managers.py
